<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/common_share_bg">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/social_title"
        android:textColor="@color/c6"
        android:textSize="@dimen/register_phoneisused_size"/>

    <LinearLayout
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/wechat_btn"
            android:layout_width="0dp"
            android:layout_height="85dp"
            android:layout_weight="1"
            android:clickable="true">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="center"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:background="@drawable/common_share_weixin"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_alignParentBottom="true"
                android:text="@string/social_weixin_title" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/wefriend_btn"
            android:layout_width="0dp"
            android:layout_height="85dp"
            android:layout_weight="1"
            android:clickable="true">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="center"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:background="@drawable/common_share_moments"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_alignParentBottom="true"
                android:text="@string/social_friend_wx_title" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/qq_btn"
            android:layout_width="0dp"
            android:layout_height="85dp"
            android:layout_weight="1"
            android:clickable="true">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="center"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:background="@drawable/common_share_qq"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_alignParentBottom="true"
                android:text="@string/social_qq_title" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/weibo_btn"
            android:layout_width="0dp"
            android:layout_height="85dp"
            android:layout_weight="1"
            android:clickable="true">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="center"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:background="@drawable/common_share_weibo"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_alignParentBottom="true"
                android:text="@string/social_sina_title" />
        </RelativeLayout>


    </LinearLayout>

    <View
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/c3"
        />
    <Button
        android:id="@+id/cancel_btn"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        android:background="@android:color/transparent"
        android:text="@string/cancel_btn_text"
        android:textSize="@dimen/register_hinttext_size"
        android:textColor="@color/c6"/>

</LinearLayout>