<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_login"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="70dp"
        android:background="@drawable/logo" />

    <com.mgjr.Utils.ClearEditText
        android:id="@+id/et_login_inputusername"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@id/img_logo"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="50dp"
        android:background="@null"
        android:digits="@string/input_pwd_format"
        android:gravity="center|left"
        android:hint="@string/login_name_hint"
        android:inputType="text"
        android:textColor="@color/tab_text_normal_color"
        android:textColorHint="#D1D1D1"
        android:textCursorDrawable="@null"
        android:textSize="16sp" />

    <TextView

        android:id="@+id/line1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/et_login_inputusername"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:background="#d9d9d9" />

    <LinearLayout
        android:id="@+id/layout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/line1"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="horizontal">

        <com.mgjr.Utils.ClearEditText
            android:id="@+id/et_login_inputpwd"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="5"
            android:background="@null"
            android:digits="@string/input_pwd_format"
            android:gravity="center|left"
            android:hint="@string/login_pwd_hint"
            android:inputType="textPassword"
            android:maxLength="16"
            android:textColor="@color/tab_text_normal_color"
            android:textColorHint="#D1D1D1"
            android:textCursorDrawable="@null"
            android:textSize="16sp" />

        <LinearLayout
            android:id="@+id/layout_pwdeye_login"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:clickable="true"
            android:gravity="center|bottom"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imgbtn_eye_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:background="@drawable/login_eye_btn" />
        </LinearLayout>
    </LinearLayout>

    <TextView

        android:id="@+id/line2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/layout1"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:background="#d9d9d9" />


    <!--图形验证码-->
    <LinearLayout
        android:id="@+id/layout_login_imgcode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/line2"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.mgjr.Utils.ClearEditText
                android:id="@+id/et_userLogin_imgCode"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/register_imgcode"
                android:inputType="number"
                android:maxLength="4"
                android:textColor="@color/tab_text_normal_color"
                android:textColorHint="#D1D1D1"
                android:textCursorDrawable="@null"
                android:textSize="16sp" />


            <Button
                android:id="@+id/btn_login_getImgCode"
                android:layout_width="88dp"
                android:layout_height="36dp"
                android:background="@drawable/shape_capitaildetails_title"
                android:text="@string/register_getcode"
                android:textColor="@color/light_orange_color"
                android:textSize="12sp" />
        </LinearLayout>

        <TextView

            android:id="@+id/line3"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/layout_login_imgcode"
            android:layout_marginRight="98dp"
            android:layout_marginTop="4dp"
            android:background="#d9d9d9" />

    </LinearLayout>


    <TextView
        android:id="@+id/tv_forgetpwd"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:layout_alignParentRight="true"
        android:layout_below="@id/layout_login_imgcode"
        android:layout_centerHorizontal="true"
        android:layout_marginRight="50dp"
        android:layout_marginTop="10dp"
        android:gravity="center|right"
        android:text="@string/forgetpwd"
        android:textColor="#34485c"
        android:textSize="12sp" />

    <!--<FrameLayout
        android:id="@+id/layout_loginbtn"
        android:layout_width="wrap_content"
        android:layout_height="44dp"
        >

-->


    <com.mgjr.share.SubmitButton
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_marginRight="55dp"
        android:layout_marginLeft="55dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_forgetpwd"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:background="@drawable/shape_registerlayout_nextstep"
        android:text="@string/login"
        android:textColor="@android:color/white"
        android:textSize="16sp" />
    <!--<com.mgjr.share.LoadingView
        android:id="@+id/loadingview_login"
        android:layout_gravity="center"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:visibility="gone"/>
</FrameLayout>-->

    <TextView
        android:id="@+id/tv_toregister"
        android:layout_width="180dp"
        android:layout_height="30dp"
        android:layout_below="@+id/btn_login"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/to_register"
        android:textColor="#ffa800"
        android:textSize="12sp" />

</RelativeLayout>