<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_login"

    android:orientation="vertical">

    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:src="@drawable/logo" />

    <LinearLayout
        android:id="@+id/layout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/img_logo"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="45dp"
        android:layout_marginRight="45dp"
        android:layout_marginTop="50dp"
        android:orientation="horizontal">

        <com.mgjr.Utils.ClearEditText
            android:id="@+id/et_register_inputpwd"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="5"
            android:background="@null"
            android:digits="@string/input_pwd_format"
            android:gravity="center|left"
            android:hint="@string/register_inputpwd_hint"
            android:inputType="textPassword"
            android:maxLength="16"
            android:textColor="@color/tab_text_normal_color"
            android:textColorHint="#d9d9d9"
            android:textCursorDrawable="@null"
            android:textSize="16sp" />

        <LinearLayout
            android:id="@+id/layout_pwdeye_register"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:clickable="true"
            android:gravity="center|bottom"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imgbtn_eye_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:background="@drawable/login_eye_btn" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/line1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/layout1"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="45dp"
        android:layout_marginRight="45dp"
        android:background="#d9d9d9" />

    <LinearLayout
        android:id="@+id/layout_et"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@id/line1"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="45dp"
        android:layout_marginRight="45dp"
        android:layout_marginTop="14dp"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/layout_et_recommed"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="vertical"
            android:visibility="invisible">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.mgjr.Utils.ClearEditText
                    android:id="@+id/et_register_recommend"
                    android:layout_width="0dp"
                    android:layout_height="36dp"
                    android:layout_weight="7"
                    android:background="@null"
                    android:digits="@string/input_pwd_format"
                    android:gravity="center|left"
                    android:hint="@string/register_recommend_hint"
                    android:lines="1"
                    android:maxLength="18"
                    android:textColor="@color/tab_text_normal_color"
                    android:textColorHint="#d9d9d9"
                    android:textCursorDrawable="@null"
                    android:textSize="16sp" />

            </LinearLayout>

            <TextView
                android:id="@+id/line2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@id/layout_et"
                android:background="#d9d9d9" />
        </LinearLayout>

    </LinearLayout>

    <FrameLayout
        android:id="@+id/layout_registerbtn"
        android:layout_width="254dp"
        android:layout_height="44dp"
        android:layout_below="@id/layout_et"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="118dp">

        <com.mgjr.share.SubmitButton
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/login_btn"
            android:text="@string/register_sure"
            android:textColor="@android:color/white"
            android:textSize="16sp" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_below="@id/layout_registerbtn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/register_press_hint"
            android:textColor="@color/tab_text_normal_color"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tv_register_agreement"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/register_agreement"
            android:textColor="@color/tab_text_normal_color"
            android:textSize="12sp" />
    </LinearLayout>

</RelativeLayout>